# etl

./: .clang-tidy  CHANGELOG  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: cmake.yml
cmake/: Config.cmake.in  ConfigVersion.cmake.in  PkgConfig.pc.in  StandardProjectSettings.cmake
dev-scripts/: settings.py
etl/: CMakeLists.txt  EtlConfig.cmake.in
etl/examples/: CMakeLists.txt  blackjack.cpp  scratch.cpp
etl/examples/blackjack/: blackjack.hpp  main.cpp
etl/examples/moveonly/: main.cpp  moveonly.hpp
etl/include/: etl.hpp
etl/tests/: CMakeLists.txt  enum_iterable_test.cpp  result_test.cpp  tagged_type_test.cpp  version_test.cpp
